# pyds9

./: .gitignore  .gitmodules  .travis.yml  MANIFEST  MANIFEST.in  Makefile  README  README.md  appveyor.yml  changelog  conf.py  ds9.py  index.rst  pyds9.py  setup.cfg  setup.py  xpa.py
cextern/: README.rst
cextern/xpa/: Makefile  Makefile.in  configure  configure.ac  tclloop.c  xlaunch.h  xpa.h  xpap.h
docs/: conf.py  index.rst  rtd-pip-requirements
docs/pyds9/: index.rst
pyds9/: __init__.py  conftest.py  pyds9.py  setup_package.py  xpa.py
pyds9/tests/: setup_package.py  test_fits.py  test_pyds9.py
pyds9/tests/data/: test.fits  test_3D.fits
xpa/: config.status  tcl.c
xpa-2.1.15/: Makefile.in  README  conf.h  conf.h.in  config.status  configure  libxpa.so.1  libxpa.so.1.0  oxpa.h  rtest.c  saoconfig  tsj.c  xpa.h  xpaaccess  xpaget  xpainfo  xpamb  xpans  xpaset  xport.h
xpa/doc/: changelog.html
