[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build pyds9/data
doctest_plus = enabled
xfail_strict = true

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyds9
description = Python connection to ds9 via XPA
long_description = Python/DS9 connection via XPA (with numpy and astropy support)
author = Bill Joye and Eric Mandel
author_email = saord@cfa.harvard.edu
license = BSD
url = https://github.com/ericmandel/pyds9
edit_on_github = False
github_project = ericmandel/pyds9

[entry_points]
